[gd_scene load_steps=3 format=3 uid="uid://dialog_scene"]

[ext_resource type="Script" path="res://presentation/dialog/dialog_scene.gd" id="1"]
[ext_resource type="Script" path="res://presentation/animated_background.gd" id="2"]

[node name="DialogScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1")

[node name="Background" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("2")

[node name="DialogPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -220.0
offset_left = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="HBox" type="HBoxContainer" parent="DialogPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PortraitRect" type="TextureRect" parent="DialogPanel/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(120, 120)
expand_mode = 3
stretch_mode = 5
mouse_filter = 2

[node name="TextVBox" type="VBoxContainer" parent="DialogPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="SpeakerLabel" type="Label" parent="DialogPanel/HBox/TextVBox"]
layout_mode = 2
text = "Speaker"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.85, 0.75, 0.5, 1)

[node name="DialogText" type="RichTextLabel" parent="DialogPanel/HBox/TextVBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Dialog text goes here..."
theme_override_font_sizes/normal_font_size = 14
scroll_active = false
mouse_filter = 2

[node name="ContinueHint" type="Label" parent="DialogPanel"]
layout_mode = 2
size_flags_vertical = 8
text = "▼ Tap to continue"
horizontal_alignment = 2
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(1, 1, 1, 0.35)
visible = false

[node name="SkipButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = 42.0
text = "Skip ▸"
flat = true
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 0.4)
